@@ -2,6 +2,9 @@
 # $Id$
 mm-dd-15 - Version 5.1.37
 
+  - Fix for Bug#77681 (21429909), rewrite replace sql like insert when rewriteBatchedStatements=true (contribution).
+    Thanks to Jie Han for his contribution.
+
   - Fix for Bug#77449 (21304726) Add 'truncateFractionalSeconds=true|false' property (contribution).
     The property 'sendFractionalSeconds' was added instead of the proposed 'truncateFractionalSeconds'.
     Thanks to KwonNam for his contribution.
